--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "editor.fontFamily": "'Office Code Pro', Monaco, 'Courier New', monospace",
     "editor.fontSize": 14,
     "editor.lineHeight": 24,
-    "workbench.colorTheme": "Night Owl (No Italics)"
+    "workbench.colorTheme": "Night Owl (No Italics)",
+    "eslint.enable": true
 }
